Make item to a record